# ePub-Extended-Metadata

./: .gitignore  .gitmodules  CREDITS  README.md  __init__.py  action.py  changelog.md  columns_metadata.py  common.py  common_utils.py  config.py  container.py  container_extended_metadata.py  epub_contributors.py  epub_editor.py  marc_relators.py  opf2.xml  pyproject.toml  readme.bbcode
.build/: build.cmd  build.py  debug.cmd
Reader/: __init__.py
Writer/: __init__.py
images/: edit_contributors_metadata.xcf  epub_extended_metadata.xcf
reader/: __init__.py
translations/: default.pot  es.po  fr.mo  fr.po
writer/: __init__.py
